[workspace]
members  = [ "cab*", "fuzz", "task" ]
resolver = "3"

[workspace.package]
description = "A reproducible contextful-expression language"
edition     = "2024"
license     = "MIT"
publish     = false
repository  = "https://github.com/cull-os/cab"
version     = "0.0.1"

[workspace.dependencies]
clap-verbosity-flag = "3.0.2"
log                 = "0.4.21"
num                 = "0.4.3"
scopeguard          = "1.2.0"
smallvec            = "2.0.0-alpha.10"
static_assertions   = "1.1.0"
unicode-width       = "0.2.0"

[workspace.dependencies.cstree]
features = [ "derive", "lasso", "multi_threaded_interning" ]
version  = "0.12.2"

[workspace.dependencies.derive_more]
features = [ "full" ]
version  = "2.0.1"

[workspace.dependencies.yansi]
features = [ "detect-env", "detect-tty", "hyperlink" ]
version  = "1.0.1"
