[package]
name        = "cab-cli"
description = "A reproducible derivation file composer"
version     = "0.0.1"
edition     = "2021"

[[bin]]
name = "cab"
path = "src/main.rs"

[dependencies]
anyhow     = "1.0.82"
clap       = { version = "4.5.4", features = [ "derive" ] }
clap-stdin = "0.4.0"
tokio      = { version = "1.37.0", features = [ "full" ] }

cab-syntax.path = "../cab-syntax"
