[package]
name        = "cab-cli"
description = "A reproducible derivation file composer"
version     = "0.0.1"
edition     = "2021"

[[bin]]
name = "cab"
path = "src/main.rs"

[dependencies]
clap                = { version = "4.5.4", features = [ "derive" ] }
clap-stdin          = "0.4.0"
clap-verbosity-flag = "2.2.0"
colored             = "2.1.0"
env_logger          = "0.11.3"
log                 = "0.4.21"
tokio               = { version = "1.37.0", features = [ "full" ] }

cab-syntax.path = "../cab-syntax"
