[package]
name        = "cab-cli"
description = "A reproducible derivation file composer"
version     = "0.0.1"
edition     = "2021"

[[bin]]
name = "cab"
path = "src/main.rs"

[dependencies]
cab.path            = "../cab"
clap-stdin          = "0.5.1"
clap-verbosity-flag = "2.2.0"
codespan-reporting  = "0.11.1"
env_logger          = "0.11.3"
log                 = "0.4.21"

[dependencies.clap]
version = "4.5.4"
features = [ "derive" ]

[dependencies.tokio]
version = "1.37.0"
features = [ "full" ]

[dependencies.yansi]
version = "1.0.1"
features = [ "detect-env", "detect-tty", "hyperlink" ]
