[package]
name                  = "cab-island"
description.workspace = true
edition.workspace     = true
license.workspace     = true
publish.workspace     = true
repository.workspace  = true
version.workspace     = true

[dependencies]
async-trait.workspace = true
bytes.workspace       = true
cab-error.path        = "../cab-error"
futures.workspace     = true
log.workspace         = true
tokio.workspace       = true
