[package]
name                  = "cab-report"
description.workspace = true
edition.workspace     = true
license.workspace     = true
publish.workspace     = true
repository.workspace  = true
version.workspace     = true

[dependencies]
cab-error.path          = "../cab-error"
cab-island.path         = "../cab-island"
cab-text.path           = "../cab-text"
cab-wrap.path           = "../cab-wrap"

const-str.workspace     = true
cstree.workspace        = true
env_logger.workspace    = true
log.workspace           = true
smallvec.workspace      = true
unicode-width.workspace = true
yansi.workspace         = true
