[package]
name                 = "cab-syntax"
edition.workspace    = true
license.workspace    = true
publish.workspace    = true
repository.workspace = true
version.workspace    = true

[dependencies]
derive_more.workspace       = true
enumset                     = "1.1.3"
log.workspace               = true
num.workspace               = true
num_enum                    = "0.7.2"
peekmore                    = "1.3.0"
rowan                       = "0.16.1"
static_assertions.workspace = true
yansi.workspace             = true

[dependencies.phf]
features = [ "macros" ]
version  = "0.11.3"
