[package]
name                 = "cab-syntax"
edition.workspace    = true
license.workspace    = true
publish.workspace    = true
repository.workspace = true
version.workspace    = true

[dependencies]
cab-report.path             = "../cab-report"
cstree.workspace            = true
derive_more.workspace       = true
enumset                     = "1.1.3"
log.workspace               = true
num.workspace               = true
peekmore                    = "1.3.0"
smallvec.workspace          = true
static_assertions.workspace = true
yansi.workspace             = true

[dependencies.phf]
features = [ "macros" ]
version  = "0.11.3"
