[package]
name                 = "cab-syntax"
edition.workspace    = true
license.workspace    = true
publish.workspace    = true
repository.workspace = true
version.workspace    = true

[dependencies]
cab-report.path = "../cab-report"
cab-text.path   = "../cab-text"

cstree.workspace            = true
derive_more.workspace       = true
enumset.workspace           = true
log.workspace               = true
num.workspace               = true
paste.workspace             = true
peekmore.workspace          = true
phf.workspace               = true
smallvec.workspace          = true
static_assertions.workspace = true
yansi.workspace             = true
