[package]
name                  = "cab-text"
description.workspace = true
edition.workspace     = true
license.workspace     = true
publish.workspace     = true
repository.workspace  = true
version.workspace     = true

[dependencies]
cstree.workspace               = true
scopeguard.workspace           = true
terminal_size.workspace        = true
unicode-segmentation.workspace = true
unicode-width.workspace        = true
yansi.workspace                = true
