[package]
name                  = "cab-wrap"
description.workspace = true
edition.workspace     = true
license.workspace     = true
publish.workspace     = true
repository.workspace  = true
version.workspace     = true

[dependencies]
cab-text.path           = "../cab-text"
scopeguard.workspace    = true
terminal_size           = "0.4.1"
unicode-width.workspace = true
yansi.workspace         = true
