[package]
name                 = "fuzz"
edition.workspace    = true
license.workspace    = true
publish.workspace    = true
repository.workspace = true
version.workspace    = true

[package.metadata]
cargo-fuzz = true

[dependencies]
cab.path        = "../cab"
libfuzzer-sys   = "0.4"
yansi.workspace = true

[[bin]]
bench = false
doc   = false
name  = "tokenizer"
path  = "fuzz_targets/tokenizer.rs"
test  = false

[[bin]]
bench = false
doc   = false
name  = "parser"
path  = "fuzz_targets/parser.rs"
test  = false
