[package]
name                 = "task"
edition.workspace    = true
license.workspace    = true
publish.workspace    = true
repository.workspace = true
version.workspace    = true

[dependencies]
cab.path            = "../cab"
clap-verbosity-flag = "3.0.2"
env_logger          = "0.11.3"
log                 = "0.4.21"
which               = "7.0.1"

[dependencies.clap]
features = [ "derive" ]
version  = "4.5.4"

[dependencies.tokio]
features = [ "full" ]
version  = "1.37.0"

[dependencies.yansi]
features = [ "detect-env", "detect-tty", "hyperlink" ]
version  = "1.0.1"

[[bin]]
bench = false
doc   = false
name  = "task"
test  = false
