[package]
name                 = "task"
edition.workspace    = true
license.workspace    = true
publish.workspace    = true
repository.workspace = true
version.workspace    = true

[dependencies]
cab.path = "../cab"

clap.workspace                = true
clap-verbosity-flag.workspace = true
tokio.workspace               = true
which.workspace               = true
yansi.workspace               = true

[[bin]]
bench = false
doc   = false
name  = "task"
test  = false
