[package]
name    = "xtask"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
cab.path            = "../cab"
clap-verbosity-flag = "2.2.0"
env_logger          = "0.11.3"
log                 = "0.4.21"
which               = "6.0.1"

[dependencies.clap]
version = "4.5.4"
features = [ "derive" ]

[dependencies.tokio]
version = "1.37.0"
features = [ "full" ]

[dependencies.yansi]
version = "1.0.1"
features = [ "detect-env", "detect-tty", "hyperlink" ]
