[package]
name                  = "cab-error"
description.workspace = true
edition.workspace     = true
license.workspace     = true
publish.workspace     = true
repository.workspace  = true
version.workspace     = true

[dependencies]
anyhow.workspace    = true
thiserror.workspace = true
yansi.workspace     = true
