[package]
name                  = "cab-island"
description.workspace = true
edition.workspace     = true
license.workspace     = true
publish.workspace     = true
repository.workspace  = true
version.workspace     = true

[dependencies]
cab-error.path = "../cab-error"

async-once-cell.workspace = true
async-trait.workspace     = true
bytes.workspace           = true
tokio.workspace           = true
