[package]
name                  = "cab-island"
description.workspace = true
edition.workspace     = true
license.workspace     = true
publish.workspace     = true
repository.workspace  = true
version.workspace     = true

[dependencies]
cab-why.path = "../cab-why"

async-once-cell.workspace = true
async-trait.workspace     = true
bytes.workspace           = true
tokio.workspace           = true
