[package]
name                  = "cab"
description.workspace = true
edition.workspace     = true
license.workspace     = true
publish.workspace     = true
repository.workspace  = true
version.workspace     = true

[dependencies]
cab-island.path = "../cab-island"
cab-syntax.path = "../cab-syntax"
cab-why.path    = "../cab-why"

clap.workspace  = true
tokio.workspace = true
yansi.workspace = true
